V2150: Aggiuta sensori livello FKS + inizio aggiustamenti sinottici

--- a/Prevu.Synoptics.V2150_Planeta/Pages/P880.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P880.xaml
@@ -226,16 +226,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="54" StatusComponent="880-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="835" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform />
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="204" RenderTransformOrigin="0.5,0.5" StatusComponent="893-01-MA1" Height="26"  Color="Air" Canvas.Left="1104" Canvas.Top="740" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -514,6 +504,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:VRC_WaterCollectingTank Height="69" Width="23" Canvas.Left="735" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:VRC_WaterCollectingTank Height="45" Width="23" Canvas.Left="861" Canvas.Top="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="659" Canvas.Top="157" Height="260" Width="306" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Width="50" Canvas.Left="151" Canvas.Top="775" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Blowers:VT_CMM_BlowerAirCompressor Width="50" Canvas.Left="958" Canvas.Top="728" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -634,8 +625,11 @@
         <Machines:V01_ScarpaTrasporto Canvas.Left="1302" Canvas.Top="317" Height="46" Width="72" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_BBF_SingleBag Canvas.Left="1356" Canvas.Top="569" Height="127" Width="110" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="51" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="740" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="2" Stroke="Black" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="876" Canvas.Top="119" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
             ComponentName="890-61-LS4" Canvas.Left="661" Canvas.Top="15" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel 
+            ComponentName="890-62-LS4" Canvas.Left="922" Canvas.Top="95" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
     </Canvas>
 </UserControl>
