--- a/Prevu.Synoptics.V2150_Planeta/Pages/P330.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P330.xaml
@@ -7,12 +7,10 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:lex="http://wpflocalizeextension.codeplex.com" 
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Silos="clr-namespace:Prevu.Drawings.Machines.Silos;assembly=Prevu.Drawings" 
-             xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="164" StatusComponent="278-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="191" Canvas.Top="142" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" >
+        <Labels:Pipe Width="164" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="191" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -22,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="82" StatusComponent="298-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="201" Canvas.Top="182" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" >
+        <Labels:Pipe Width="82" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="201" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -53,20 +51,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="6" Canvas.Left="728" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="728" Canvas.Top="355" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="553" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="887" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="126" StatusComponent="298-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="121" Canvas.Top="146" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" />
-        <Labels:Pipe Width="180" StatusComponent="278-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="97" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" />
-        <Labels:Pipe Width="144" StatusComponent="301-DISCHARGE" PipeHeight="Medium" Height="22" Canvas.Left="357" Canvas.Top="534" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
+        <Labels:Pipe Width="126" StatusComponent="298-01-MA1" PipeHeight="Medium" Canvas.Left="121" Canvas.Top="152" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="299-21-CV1" VisibilitySignal="LS1" />
+        <Labels:Pipe Width="180" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="97" Canvas.Top="71" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" />
+        <Labels:Pipe Width="144" StatusComponent="301-DISCHARGE" PipeHeight="Medium" Canvas.Left="362" Canvas.Top="538" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -76,7 +65,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="166" StatusComponent="306-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="193" Canvas.Top="683" RenderTransformOrigin="0.5,0.5" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="166" StatusComponent="306-01-MA1" PipeHeight="Medium" Canvas.Left="193" Canvas.Top="688" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -86,8 +75,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="304" StatusComponent="308-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="576" Canvas.Top="72" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="72" StatusComponent="308-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="840" Canvas.Top="103" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="304" StatusComponent="308-01-MA1" PipeHeight="Medium" Canvas.Left="576" Canvas.Top="77" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="72" StatusComponent="308-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="840" Canvas.Top="108" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -97,7 +86,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="296" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="755" Canvas.Top="394" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="296" StatusComponent="324-01-MA1" PipeHeight="Medium" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="755" Canvas.Top="394" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -117,7 +106,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="68" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS1" VisibilityComponent="324-21-CV1" Canvas.Left="869" Canvas.Top="179" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="68" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilitySignal="LS1" VisibilityComponent="324-21-CV1" Canvas.Left="869" Canvas.Top="179" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -127,8 +116,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="237" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="1069" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="282" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" Canvas.Left="1160" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="237" StatusComponent="324-01-MA1" PipeHeight="Medium" Canvas.Left="1069" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="282" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1160" Canvas.Top="284" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -139,22 +128,9 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="80" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1288" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="184" StatusComponent="308-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="402" Canvas.Top="759" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Height="6" Canvas.Left="916" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:V01_SLX_Silo Canvas.Left="192" Canvas.Top="181" Height="294" Width="219" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="300-41-LT1" TrendName="LEVEL" Color="DryMaterial"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="180" Canvas.Left="267" Canvas.Top="606"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="265" Canvas.Top="759" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="198" Canvas.Left="251" Canvas.Top="461" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="694" StatusComponent="308-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="234" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+        <Labels:Pipe Width="184" StatusComponent="308-01-MA1" PipeHeight="Medium" Canvas.Left="402" Canvas.Top="764" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="916" Canvas.Top="355" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="694" StatusComponent="308-01-MA1" PipeHeight="Medium" Canvas.Left="234" Canvas.Top="421" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -164,6 +140,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Machines:V01_SLX_Silo Canvas.Left="192" Canvas.Top="181" Height="294" Width="219" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="300-41-LT1" TrendName="LEVEL" Color="DryMaterial"/>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="180" Canvas.Left="267" Canvas.Top="606"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="166" Canvas.Left="265" Canvas.Top="759" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight Height="22" Width="198" Canvas.Left="251" Canvas.Top="461" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Top" Height="46" Width="52" Canvas.Left="326" Canvas.Top="143"/>
         <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="999" Canvas.Top="520" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_STR_BatchReactor Height="300" Canvas.Left="778" Canvas.Top="487" Width="137" HorizontalAlignment="Center" VerticalAlignment="Top" Color="WetMaterial" ComponentName="330-41-LT1" TrendName="LEVEL"/>
@@ -178,51 +158,22 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="862" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="300-41-LT1" 
-            JumpToLabel="279-21-CV1" Canvas.Left="29" Canvas.Top="41" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="306-01-MA1" Canvas.Left="206" Canvas.Top="551" />
-        <Labels:DeviceLabel 
-            ComponentName="308-01-MA1" Canvas.Left="402" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:JumpLabel 
-            JumpFromLabel="300-41-LT1" 
-            JumpToLabel="299-21-CV1" Canvas.Left="64" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="300-41-LT1" Canvas.Left="376" Canvas.Top="123"/>
-        <Labels:DeviceLabel 
-            ComponentName="330-WASHING" Canvas.Left="1013" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="330-MIXER" Canvas.Left="802" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="324-21-CV1" Canvas.Left="790" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="324-01-MA1" Canvas.Left="1041" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="862" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="300-41-LT1" JumpToLabel="279-21-CV1" Canvas.Left="29" Canvas.Top="41" />
+        <Labels:JumpLabel JumpFromLabel="300-41-LT1" JumpToLabel="299-21-CV1" Canvas.Left="64" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:JumpLabel JumpFromLabel="340-WASHING" JumpToLabel="354-HEAT" Canvas.Left="650" Canvas.Top="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="350-01-MA1" Canvas.Left="1431" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="330-VIEW" DetailsPageName="D330" Canvas.Left="821" Canvas.Top="696" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="335-MIXER" Canvas.Left="1203" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="335-VIEW" DetailsPageName="D335" Canvas.Left="1222" Canvas.Top="572" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
-            JumpFromLabel="340-WASHING" 
-            JumpToLabel="354-HEAT" Canvas.Left="650" Canvas.Top="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="301-VIEW" DetailsPageName="D301" Canvas.Left="487" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" HideComponentName="True"/>
-        <Labels:DeviceLabel 
-            ComponentName="301-DISCHARGE" Canvas.Left="388" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel 
-            JumpFromLabel="330-WASHING" 
-            JumpToLabel="350-01-MA1" Canvas.Left="1431" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="306-01-MA1" Canvas.Left="206" Canvas.Top="551" />
+        <Labels:DeviceLabel ComponentName="308-01-MA1" Canvas.Left="402" Canvas.Top="700" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="300-41-LT1" Canvas.Left="376" Canvas.Top="123"/>
+        <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="1013" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="330-MIXER" Canvas.Left="802" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="324-21-CV1" Canvas.Left="790" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="324-01-MA1" Canvas.Left="1041" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="335-MIXER" Canvas.Left="1203" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="301-DISCHARGE" Canvas.Left="388" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
