--- a/Prevu.Synoptics.V2150_Planeta/Pages/P910.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P910.xaml
@@ -226,16 +226,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="54" StatusComponent="880-01-ECS10" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="835" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform />
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Width="204" RenderTransformOrigin="0.5,0.5" StatusComponent="923-01-MA1" Height="26"  Color="Air" Canvas.Left="1104" Canvas.Top="740" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -645,6 +635,10 @@
             ComponentName="920-01-ECS11" Canvas.Left="597" Canvas.Top="323" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="920-01-ECS12" Canvas.Left="597" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:VRC_WaterCollectingTank Height="45" Width="23" Canvas.Left="861" Canvas.Top="114" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Rectangle Height="2" Stroke="Black" Width="51" RenderTransformOrigin="0.5,0.5" Canvas.Left="876" Canvas.Top="119" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel 
+            ComponentName="920-62-LS4" Canvas.Left="922" Canvas.Top="95" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
     </Canvas>
 </UserControl>
