--- a/Prevu.Details/Others/DET_015_FP400_Hydr.xaml
+++ b/Prevu.Details/Others/DET_015_FP400_Hydr.xaml
@@ -10,7 +10,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.DET_015_FP400_Hydr">
     <Canvas Height="425" Width="468">
-        <Labels:Pipe HorizontalAlignment="Left" Margin="213,65,0,0" VerticalAlignment="Top" Color="Oil" Width="32" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="32" RenderTransformOrigin="0.5,0.5" StatusComponent="464-25-CV1" Canvas.Left="213" Canvas.Top="71">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -20,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="305" Canvas.Top="292">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="464-03-MA1" Canvas.Left="305" Canvas.Top="298">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -30,7 +30,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="222" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1" Canvas.Left="215" Canvas.Top="160">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="222" RenderTransformOrigin="0.5,0.5" StatusComponent="464-25-CV1" Canvas.Left="215" Canvas.Top="166">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -40,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="15" Canvas.Top="292">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="464-03-MA1" Canvas.Left="15" Canvas.Top="298">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -50,7 +50,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="Oil" Width="116" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="171" Canvas.Top="216">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="112" RenderTransformOrigin="0.5,0.5" StatusComponent="464-03-MA1" Canvas.Left="173" Canvas.Top="224">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -60,9 +60,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Oil" Width="295" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-03-MA1" Canvas.Left="34" Canvas.Top="273"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Oil" Width="101" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1" Canvas.Left="227" Canvas.Top="51"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="206,119,0,0" VerticalAlignment="Top" Color="Oil" Width="46" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-25-CV1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="295" RenderTransformOrigin="0.5,0.5" StatusComponent="464-03-MA1" Canvas.Left="34" Canvas.Top="279"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="101" RenderTransformOrigin="0.5,0.5" StatusComponent="464-25-CV1" Canvas.Left="227" Canvas.Top="57"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="464-25-CV1" Canvas.Left="206" Canvas.Top="129">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
